added initial Components

--- a/client/src/components/Topbar/Topbar.css
+++ b/client/src/components/Topbar/Topbar.css
@@ -72,7 +72,7 @@
 .topbarIconBadge {
     width: 15px;
     height: 15px;
-    background-color: firebrick;
+    background-color: crimson;
     border-radius: 50%;
     color: #fff;
     position: absolute;
