--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,18 @@ li,
 ul {
   list-style: none;
 }
+
+.image {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+button {
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
