--- a/client/src/components/Share/Share.css
+++ b/client/src/components/Share/Share.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 170px;
     border-radius: 10px;
-    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+    box-shadow: var(--shadow);
 }
 
 .shareWrapper {
@@ -18,21 +18,22 @@
     border: none;
     outline: none;
     width: 85%;
+    height: 5rem;
 }
-
 
 .shareProfileImage {
     margin-right: 10px;
 }
 
 .shareHr {
-    margin: 20px;
+    margin: 10px 20px;
 }
 
 .shareBottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 20px 30px 0 30px;
 }
 
 .shareOptions {
@@ -57,8 +58,7 @@
 }
 
 .shareButton {
-    background-color: #ddd;
-    padding: 8px 25px;
     font-weight: 500;
-    margin-right: 20px;
+    width: 7rem;
+    height: 2rem;
 }
