--- a/client/src/components/Rightbar/Rightbar.css
+++ b/client/src/components/Rightbar/Rightbar.css
@@ -1,3 +1,66 @@
 .rightbar {
     flex: 3.5;
 }
+
+.rightbarWrapper {
+    padding: 20px 20px 0 0;
+}
+
+.birthdayContainer {
+    display: flex;
+    align-items: center;
+}
+
+
+.birthdayImage {
+    width: 36px;
+    height: 36px;
+    margin-right: 10px;
+}
+
+.birthdayText {
+    font-weight: 300;
+    font-size: 15px;
+}
+
+.rightbarAd {
+    width: 100%;
+    border-radius: 10px;
+    margin: 30px 0;
+}
+
+.rightbarTitle {
+    margin-bottom: 20px;
+}
+
+.rightbarFriend {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.rightbarProfileImageContainer {
+    margin-right: 10px;
+    position: relative;
+}
+
+.rightbarProfileImage {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.rightbarOnline {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    background-color: limegreen;
+    position: absolute;
+    top: -2px;
+    right: 0;
+}
+
+.rightbarUsername {
+    font-weight: 500;
+}
