Adding Context, updates in Login Page

--- a/client/src/components/Share/Share.css
+++ b/client/src/components/Share/Share.css
@@ -21,6 +21,11 @@
     height: 5rem;
 }
 
+.shareInput:focus {
+    border: none;
+    outline: none;
+}
+
 .shareProfileImage {
     margin-right: 10px;
 }
