fetching user in Login

--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -69,6 +69,10 @@ input:focus {
     font-weight: 500;
 }
 
+.loginButton:disabled {
+    cursor: not-allowed;
+}
+
 .loginForgot {
     text-align: center;
     color: #135fc3;
