--- a/client/src/components/Topbar/Topbar.css
+++ b/client/src/components/Topbar/Topbar.css
@@ -88,3 +88,12 @@
     justify-content: center;
     font-size: 12px;
 }
+
+.topbarUsername {
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.topbarUsername span {
+    font-weight: 400;
+}
