--- a/client/src/components/Rightbar/Rightbar.css
+++ b/client/src/components/Rightbar/Rightbar.css
@@ -74,3 +74,26 @@
     object-fit: cover;
     border-radius: 5px;
 }
+
+.rightbarFollowButton {
+    margin: 30px 0 10px 0;
+    padding: 3px 7px;
+    border-radius: 5px;
+    border: none;
+    display: flex;
+    place-items: center;
+    gap: 10px;
+    background-color: #1877f2;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.rightbarFollowButton:focus {
+    outline: none;
+}
+
+.rightbarFollowButton:hover {
+    color: #1877f2;
+}
