--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -71,12 +71,19 @@
 .registerButton {
     margin-top: 1.5rem;
     height: 50px;
+    width: 80%;
+    margin-inline: auto;
     border-radius: 10px;
     border: none;
     background-color: cornflowerblue;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
+}
+
+.registerButton:hover {
+    background-color: #ccc;
+    color: cornflowerblue;
 }
 
 .registerForgot {
@@ -86,10 +93,18 @@
 
 .registerLoginButton {
     height: 50px;
+    width: 80%;
+    margin-inline: auto;
     border-radius: 10px;
     border: none;
     background-color: limegreen;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
+    text-align: center;
+}
+
+.registerLoginButton:hover {
+    background-color: #ccc;
+    color: limegreen;
 }
