--- a/client/src/components/Rightbar/Rightbar.css
+++ b/client/src/components/Rightbar/Rightbar.css
@@ -63,16 +63,21 @@
 .rightbarFollowing {
     display: flex;
     flex-direction: column;
-    gap: .7rem;
+    align-items: center;
+    gap: 1rem;
     cursor: pointer;
+    text-transform: capitalize;
+    font-weight: 500;
 }
 
 
 .rightbarFollowingImage {
-    width: 6rem;
-    height: 6rem;
+    width: 5rem;
+    height: 5rem;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 10px;
+    border: 3px solid #ccc;
+
 }
 
 .rightbarFollowButton {
