--- a/client/src/components/Share/Share.css
+++ b/client/src/components/Share/Share.css
@@ -1,6 +1,5 @@
 .share {
     width: 100%;
-    height: 170px;
     border-radius: 10px;
     box-shadow: var(--shadow);
 }
@@ -66,4 +65,23 @@
     font-weight: 500;
     width: 7rem;
     height: 2rem;
+}
+
+.shareImageContainer {
+    padding: 0 20px 10px 20px;
+    position: relative;
+}
+
+.shareImg {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.shareCancelIcon {
+    position: absolute;
+    top: 2%;
+    right: 25px;
+    cursor: pointer;
+    opacity: 0.7;
 }
